# DFLOP

./: README.md  data_aware_optimizer.py  prof_engine.py  pyproject.toml  run_profile.py  scheduler.py  train.py
configs/: dataset_config.yaml  dflop_config.yaml
dflop/: __init__.py  config.py  data.py  internvit_modules.py  loader.py  model.py  parallel.py  prof_utils.py  pyproject.toml  torchtune_models.py  train.py
dflop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dflop/dflop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dflop/optimization/: data_aware_optimizer.py
dflop/pipeline/: dflop_pp_schedule_module.py  dflop_pp_stage_module.py
dflop/profiler/: profiler.py  run_profiler.py  utils.py
dflop/scheduler/: data_scheduling.py
dflop/utils/: data_sched_utils.py  data_utils.py  dmllm_profiler.py  internvit_modules.py  model_utils.py  ours_model_utils.py  utils.py  vision_llm_topo_utils.py
llava/: llava_utils.py
llava/llava/: mm_utils.py
llava/llava/model/: __init__.py  llava_arch.py
llava/llava/train/: train.py
scripts/: run_data_aware_optimization.sh  run_dataset_analysis.sh  run_mem_llm.sh  run_mem_vision.sh  run_profiling_engine.sh  run_thr_llm_full.sh  run_thr_llm_skip_attn.sh  run_thr_vision.sh  run_training.sh  single_node_profiling.sh
torchtune/recipes/: full_finetune_distributed.py  full_finetune_single_device.py
utils/: __init__.py  data.py  loader.py  mem_modeling.py  model.py  parallel.py  profile.py  utils.py
utils/pipeline/: dflop_pp_schedule_module.py  dflop_pp_stage_module.py
(+11 files in other folders)
